--- a/correlater/platforms/android/res/xml/config.xml
+++ b/correlater/platforms/android/res/xml/config.xml
@@ -8,6 +8,9 @@
     <feature name="Device">
         <param name="android-package" value="org.apache.cordova.device.Device" />
     </feature>
+    <feature name="NetworkStatus">
+        <param name="android-package" value="org.apache.cordova.networkinformation.NetworkManager" />
+    </feature>
     <name>Correlater</name>
     <description>
         A sample Apache Cordova application that responds to the deviceready event.
