Added battery status Plugin.

--- a/correlater/platforms/android/res/xml/config.xml
+++ b/correlater/platforms/android/res/xml/config.xml
@@ -23,6 +23,9 @@
     <feature name="Vibration">
         <param name="android-package" value="org.apache.cordova.vibration.Vibration" />
     </feature>
+    <feature name="Battery">
+        <param name="android-package" value="org.apache.cordova.batterystatus.BatteryListener" />
+    </feature>
     <name>Correlater</name>
     <description>
         A sample Apache Cordova application that responds to the deviceready event.
