--- a/correlater/www/css/global.css
+++ b/correlater/www/css/global.css
@@ -41,7 +41,6 @@ body {
     height:100%;
     margin:0px;
     padding:0px;
-    text-transform:uppercase;
     width:100%;
 }
 
@@ -112,4 +111,35 @@ h1 {
 .blink {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
+}
+
+/*Media Query*/
+#navBar {
+	background-color: blue;
+    border-bottom: lightblue;
+}
+
+#navBar #title {
+    color: white;
+    font-size: large;
+}
+
+#back {
+    margin-top: 1%;
+}
+
+.navItem {
+	padding: 1% 3%;
+	margin: 1% 3%;
+    display: inline-block;
+}
+
+#feedBack {
+    text-align: center;
+}
+
+#forgotPW {
+    font-size: x-small;
+    color: red;
+    text-align: right;
 }
