--- a/correlater/www/css/global.css
+++ b/correlater/www/css/global.css
@@ -77,6 +77,28 @@ h1 {
     text-align:center;
 }
 
+form {
+    width: 300px;
+    margin: 0 auto;
+}
+label {
+    display: block;
+    margin-left: 20px;
+}
+input {
+    float: left;
+    margin-left: -20px;
+    margin-right: 7px;
+}
+
+.checkboxes label {
+    display: block;
+    float: left;
+    padding-right: 10px;
+    padding-left: 22px;
+    text-indent: 22px;
+}
+
 .event {
     border-radius:4px;
     -webkit-border-radius:4px;
