Made no shadow on right panel, set to !important

--- a/correlater/www/css/global.css
+++ b/correlater/www/css/global.css
@@ -119,8 +119,8 @@
 /*PANELS*/
 div[data-role="panel"] {
   background-color: #dddddd !important;
-  -webkit-box-shadow: none;
-  box-shadow: none;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
 }
 
 /*FRIENDS PANEL*/
