Switched over to IonicFramework. Request accepts broken

--- a/correlater/www/css/global.css
+++ b/correlater/www/css/global.css
@@ -18,7 +18,7 @@
 }
 
 .primary-3, .primary-3 h1, .primary-3 h1 a{
-  background-color: #628AD3 !important;
+  background-color: #4a87ee  !important;
   color: #ffffff;
   text-shadow: none;
   text-decoration: none;
