- Change APP name to Corral - Separate Sign in Pages - Google Sign In through Google - Changed Google urls to match backend - Invite and Native Sign In now uses jQuery Form Validation

--- a/correlater/www/css/global.css
+++ b/correlater/www/css/global.css
@@ -27,8 +27,8 @@
 }
 
 .primary-3 a.navItem {
-  background-color: #628AD3 !important;
-  border-color: #628AD3 !important;
+  background-color: #4a87ee !important;
+  border-color: #4a87ee !important;
 }
 
 .availableNow {
