--- a/correlater/www/css/ionicMain.css
+++ b/correlater/www/css/ionicMain.css
@@ -8,7 +8,7 @@
 }
 
 .sideTab {
-	width: 20%;
+	width: 140px;
 	border: 3px solid #4a87ee;
 	border-bottom: none;
 	background: #4a87ee;
@@ -20,74 +20,43 @@
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4), inset 0 1px 0 #4a87ee;
 	text-shadow: 0 1px #FFF;
 	margin: 0 -5px;
-	padding: 0 30px;
-	bottom: 8px;
+	padding: 0 10px;
+	bottom: 5px;
 	height: 50px;
 }
 
 .sideTab:after {
   border: 1px solid #4a87ee;
   position: absolute;
-  bottom: -1px;
-  width: 50px;
-  height: 30px;
+  bottom: 5px;
+  width: 100px;
+  height: 20px;
+  z-index: 1;
   content: " ";
-  right: -51px;
-  border-bottom-left-radius: 30px;
+  right: -102px;
+  border-bottom-left-radius: 25px;
   border-width: 0px 0px 1px 1px;
   box-shadow: -20px 0px 0 #4a87ee;
 }
 
-.rightTab {
-	width: 76.5%;
-	border: 3px solid #43cee6 ;
-	border-bottom: none;
-	background: #f8f8f8 ;
-	display: inline-block;
-	position:relative;
-	z-index: 0;
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
-	text-shadow: 0 1px #FFF;
-	margin: 0 -5px;
-	padding: 0 30px;
-	bottom: 33px;
-	left: 30px;
-	height: 50px;
-}
-.sideTab:before {
-  border: 1px solid #43cee6;
-  position: absolute;
-  bottom: -1px;
-  width: 50px;
-  height: 30px;
-  content: " ";
-  right: -30px;
-  border-bottom-right-radius: 30px;
-  border-width: 0px 1px 1px 0px;
-  box-shadow: 20px 0px 0 #43cee6;
-}
-
-.rightTab * {
-	display: inline-block;
-}
-
 #currentMood {
 	position: absolute;
-	width: 90%;
+	top: ;
+	width: 95%;
+	height: 34px;
+	margin-left: 1.5%;
+	background-color: white;
+	border-radius: 10px;
 }
 
-.rightTab #moodLabel {
-	font-size: 12px;
-	position: relative;
-    -ms-transform: rotate(-90deg); /* IE 9 */
-    -webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
-    transform: rotate(-90deg);
-    text-decoration: underline;
-    color: lightgrey;
-    top: 13px;
-    margin-left: -35px;
+#currentMood p {
+	padding: 0px 10px;
+	width: 100%;
+	color: black;
+	font-size: x-small;
 }
+
+
 
 .floatBlock {
 	width: 10px;
@@ -103,12 +72,50 @@
 	width: 100%;
 }
 
-#invisSet {
-	margin: 0px auto;
-	top: -3px;
-	left: -25px;
-	background: none;
-	border: none;
-	padding: 20px 0px;
-	width: 70px
+#invisArea {
+	position: absolute;
+	z-index: 5;
+}
+
+.calmSection {
+	background-color: #43cee6;
+	display: inline-block;
+	margin: 0px 38px;
+	padding: 0px;
+	position: absolute;
+}
+
+.freeSection {
+	background-color: #66cc33;
+	display: inline-block;
+	margin: 0px 0px;
+	padding: 0px;
+	position: absolute;
+	border-top-left-radius: 50px;
+	border-bottom-left-radius: 50px;
+}
+
+.freeSection.button-outline{
+	background-color: white;
+	border-top-left-radius: 50px;
+	border-bottom-left-radius: 50px;
+}
+
+.invisSection {
+	background-color: white;
+	display: inline-block;
+	margin: 0px 76px;
+	padding: 0px;
+	position: absolute;
+	border-top-right-radius: 50px;
+	border-bottom-right-radius: 50px;
+}
+
+.invisSection.button-outline.button-stable{
+	border-top-left-radius: 50px;
+	border-bottom-left-radius: 50px;
+}
+
+.moodBar {
+	background-color: #CCCCCC;
 }
