Changed the Sign in and Create account pages
Removed the nav bar on the sign in and create account pages, removed
border from google/facebook buttons, fixed buttons to the bottom of the
page.

--- a/correlater/www/css/global.css
+++ b/correlater/www/css/global.css
@@ -230,3 +230,27 @@ label.error {
 h1.channel {
   color: white;
 }
+
+#AccountForm{
+
+}
+
+/*SIGN IN/ADD ACCOUNT PAGE*/
+#googleLogin {
+	border: none;
+}
+
+#Facebook {
+	border: none;
+}
+
+#accountButtons {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	position: absolute;
+     bottom: 40px;
+     left: 0px;
+	 right: 0px;
+     width: 90%;
+}
