--- a/correlater/www/css/ionicMain.css
+++ b/correlater/www/css/ionicMain.css
@@ -125,21 +125,42 @@
 	background-color: #CCCCCC;
 }
 
+.emptyNowItemContainer{
+	width: 50%;
+	margin: 0px auto;
+}
+
+.emptyNowItemContainer p{
+	position: absolute;
+	margin-top:100%;
+	font-size: 18px;
+}
+
+.emptyItemContainer{
+	width: 30%;
+	margin: 0px auto;
+}
+
+.emptyItemContainer p{
+	position: absolute;
+	margin-top:110%;
+	font-size: 18px;
+}
+
 #emptyRListItem, #emptyNListItem {
 	height: 500px;
-	padding-top: 70%;
 	text-align: center;
 }
 
 #emptyFListItem {
 	height: 500px;
-	padding-top: 60%;
+	margin-top: -20%;
 	text-align: center;
 }
 
 #emptyNowItem {
 	height: 500px;
-	padding-top: 50%;
+	margin-top: -10%;
 	text-align: center;
 }
 
@@ -348,33 +369,33 @@ h2 {
 }
 
 .noAvailBG {
-  background-image: url(../img/filename.png);
+  background-image: url(../img/NoAvailableBG.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 100% 100%;
-  opacity: 0.7;
+  background-size: 100% 40%;
+  opacity: 0.5;
 }
 
 .noFriendsBG {
-  background-image: url(../img/filename.png);
+  background-image: url(../img/NoFriendsListBG.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 100% 100%;
-  opacity: 0.7;
+  background-size: 100% 40%;
+  opacity: 0.5;
 }
 
 .noNudgesBG {
-  background-image: url(../img/filename.png);
+  background-image: url(../img/NoNudgesBG.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 100% 100%;
-  opacity: 0.7;
+  background-size: 100% 40%;
+  opacity: 0.5;
 }
 
 .noRequestsBG {
-  background-image: url(../img/filename.png);
+  background-image: url(../img/NoRequestsBG.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 100% 100%;
-  opacity: 0.7;
+  background-size: 100% 40%;
+  opacity: 0.5;
 }
