- Added inviteFromGoogle HTML and JS files, for inviting friends from google contacts - Added appropriate button on invite.html - Added condition to only show [Invite from Google contact] when it is a google user log in.

--- a/correlater/www/css/global.css
+++ b/correlater/www/css/global.css
@@ -193,6 +193,10 @@ div[data-role="content"] h1, div[data-role="content"] p {
     display: none;
 }
 
+#inviteGoogle {
+  display: none;
+}
+
 #friendSearch {
 
 }
