--- a/correlater/www/css/global.css
+++ b/correlater/www/css/global.css
@@ -252,9 +252,13 @@ h1.channel {
 
 #create{
 	position:absolute;
-	bottom: 0%;
+	bottom: 3%;
 	left: 5%;
 	right: 5%;
+	background: rgba(255, 255, 255, 0.60);
+	border-radius: 10px;
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
+	padding: 10px;
 }
 
 #startPageButtons{
@@ -292,6 +296,10 @@ h1.channel {
 	bottom: 3%;
 	left: 5%;
 	right: 5%;
+	background: rgba(255, 255, 255, 0.60);
+	border-radius: 10px;
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
+	padding: 10px;
 	
 }
 
