--- a/correlater/www/css/ionicMain.css
+++ b/correlater/www/css/ionicMain.css
@@ -132,7 +132,7 @@
 
 .emptyNowItemContainer p{
 	position: absolute;
-	margin-top:100%;
+	margin-top: 350px;
 	font-size: 18px;
 }
 
@@ -143,7 +143,7 @@
 
 .emptyItemContainer p{
 	position: absolute;
-	margin-top:110%;
+	margin-top: 350px;
 	font-size: 18px;
 }
 
